# python-project-lvl1

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: README.md  linter-check.yml
.github/рабочие процессы/: README.md
brain_games/: cli.py  engine.py
brain_games/game/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: BRAIN_GAMES.py  brain_calc.py  brain_calc1.py  brain_calc_scr.py  brain_even.py  brain_even1.py  brain_even_scr.py  brain_game.py  brain_games.py  brain_gcd.py  brain_gcd1.py  brain_gcd_scr.py  brain_prime.py  brain_prime1.py  brain_prime_scr.py  brain_progression.py  brain_progression1.py  brain_progression_scr.py  cli.py  engine.py
