[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Volkov"]
packages = [
{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
prompt-toolkit = "^3.0.28"

[tool.poetry.scripts]
brain-games ="brain_games.game.BRAIN_GAMES:main"
brain-even = "brain_games.scripts.brain_even1:main"
brain-calc = "brain_games.scripts.brain_calc1:main"
brain-gdc = "brain_games.scripts.brain_gcd1:main"
brain-progression = "brain_games.scripts.brain_progression1:main"
[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
