[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitriy Volkov"]
packages = [
{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
prompt-toolkit = "^3.0.28"

[tool.poetry.scripts]
brain-games ="brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even_scr:main"
brain-calc = "brain_games.scripts.brain_calc_scr:main"
brain-gcd = "brain_games.scripts.brain_gcd_scr:main"
brain-progression = "brain_games.scripts.brain_progression_scr:main"
brain-prime = "brain_games.scripts.brain_prime_scr:main"

[tool.poetry.urls]
"brain-games" = "https://github.com/Dima343316/python-project-lvl1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
